# Air_quality_forecasting

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: project_dev.yml
data/processed/: .gitignore  current_data.csv.dvc  reference_data.csv.dvc
data/processed/air/: .gitignore  obdelani_podatki_air.csv.dvc
data/processed/weather/: .gitignore  future_3_days.csv.dvc  last_3_days.csv.dvc  obdelani_podatki_weather.csv.dvc
data/raw/air/: .gitignore  neobdelani_podatki.json.dvc
data/raw/weather/: .gitignore  future_3_days.json.dvc  neobdelani_podatki.json.dvc
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: my_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id  my_suite.json
models/: model.pkl
reports/: DataDriftPreset_report.html  DataStabilityTest_report.html  train_metrics.txt
src/client/: index.html
src/data/: data_stability_test.py  fetch_data_weather.py  process_data.py  process_data_air.py  process_data_weather.py  train_test_split.py
src/graphs/: pm10_graph.py
src/models/: train_model.py
src/serve/: api.py
src/tests/: test_fetch_data_air.py  test_fetch_data_weather.py
