[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Jure Zavratnik <jure.zavratnik@student.um.si>", "Aljaz Herzog <aljaz.herzog@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.10"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
flask = "^2.2.3"
requests = "^2.28.2"
matplotlib = "^3.7.1"
datetime = "^5.1"
great-expectations = "^0.16.3"
evidently = "^0.2.7"
mlflow = "1.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
